Ejercicio de pruebas unitarias terminado